# cloudllm

./: .gitignore  .plan  CHANGELOG.md  CLAUDE_COUNCIL.md  COUNCIL_TUTORIAL.md  Cargo.toml  DOCUMENTATION_AUDIT.md  HANDOFF.md  ISSUE_ANALYSIS_PAYLOAD_REUSE.md  LICENSE  MEMORY.md  MENTISDB_MCP.md  MENTISDB_REST.md  Makefile  NOM_FUTURE_INCOMPATIBILITY_ANALYSIS.md  ORCHESTRATION_TUTORIAL.md  README.md  STREAMING.md  THOUGHTCHAIN_MCP.md  THOUGHTCHAIN_REST.md  breakout_game.html  breakout_game_agent_teams.html  changelog.txt  first_try_breakout_game.html  tetris_planner_output.html
.claude/agents/: README.md  apollo.md  astro.md
benches/: payload_conversion_bench.rs
docs/: performance_analysis_provider_payload_caching.md
examples/: MEMORY_TOOL_GUIDE.md  MULTI_MCP_ARCHITECTURE.md  MULTI_PROTOCOL_AGENT_DIAGRAM.md  README.md  agent_panel_with_moderator_and_access_to_tools.rs  agent_panel_with_moderator_and_access_to_tools.rs~  anthropic_teams.rs  bash_tool_basic.rs  breakout_game_agent_teams.rs  breakout_game_ralph.html  breakout_game_ralph.rs  calculator_example.rs  council_demo.rs  council_with_memory.rs  digimon_vs_pokemon_debate.rs  filesystem_example.rs  http_client_example.rs  interactive_session.md  interactive_session.rs  interactive_streaming_session.md  interactive_streaming_session.rs  mcp_memory_client.rs  mcp_memory_server.rs  mcp_server_all_tools.rs  memory_session_with_snapshots.rs  multi_mcp_agent.rs  multi_participant_example.md  multi_participant_example.rs  openai_bitcoin_price_example.rs  openai_web_search_example.rs  openrouter_basic.rs  orchestration_demo.rs  orchestration_with_memory.rs  persistent_agent_chat.rs  streaming_example.md  streaming_example.rs  streaming_session_example.rs  tetris_mcp_server.rs  tetris_mcp_server_output.html  tetris_planner_team.rs  (+2 more)
examples/support/: persistent_agent_tools.rs  thoughtchain_mcp.rs
mcp/: Cargo.toml  README.md
mcp/src/: builder.rs  builder_utils.rs  client.rs  events.rs  http.rs  lib.rs  protocol.rs  server.rs  streamable_http.rs
mcp/tests/: protocol_tests.rs  server_tests.rs  sse_tests.rs  streamable_http_tests.rs
mentisdb/: AGENTS.md  Cargo.toml  MENTISDB_SKILL.md  MENTISDB_SKILL_ai-systems-security-engineer_.md  MENTISDB_SKILL_alden_.md  MENTISDB_SKILL_apollo_.md  MENTISDB_SKILL_astro_.md  MENTISDB_SKILL_blockchain-engineer_.md  MENTISDB_SKILL_canuto_.md  MENTISDB_SKILL_gubatron_.md  MENTISDB_SKILL_leptos-frontend-engineer_.md  MENTISDB_SKILL_rust-backend-engineer_.md  README.md  WHITEPAPER.md  changelog.txt  start_mentisdbd
mentisdb/benches/: http_concurrency.rs  skill_registry.rs  thought_chain.rs
mentisdb/src/: lib.rs  server.rs  skills.rs
mentisdb/tests/: mentisdb_tests.rs  server_tests.rs  skill_registry_tests.rs
src/: lib.rs
src/cloudllm/: agent.rs  client_wrapper.rs  config.rs  context_strategy.rs  council.rs  council_session.rs  event.rs  http_client_pool.rs  image_generation.rs  llm_session.rs  mcp_http_adapter.rs  mcp_server.rs  mcp_server_builder.rs  mcp_server_builder_utils.rs  mod.rs  multi_participant_session.rs  orchestration.rs  planner.rs  resource_protocol.rs  thought_chain.rs  tool_adapters.rs  tool_protocol.rs  tool_protocols.rs
src/cloudllm/clients/: claude.rs  common.rs  gemini.rs  grok.rs  http_pool.rs  mod.rs  openai.rs  openrouter.rs
src/cloudllm/tools/: bash.rs  calculator.rs  filesystem.rs  http_client.rs  memory.rs  mod.rs
tests/: agent_tests.rs  bash_tool_agent_integration_test.rs  bash_tool_test.rs  calculator_tool_test.rs  client_tests.rs  client_wrappers_tests.rs  connection_pooling_test.rs  context_strategy_tests.rs  council_session_tests.rs  filesystem_tool_test.rs  http_client_tool_test.rs  image_generation_tests.rs  llm_session_bump_allocations_test.rs  llm_session_tests.rs  mcp_memory_client_test.rs  mcp_server_builder_utils_test.rs  memory_adapters_doc_tests.rs  memory_tools_test.rs  mentisdb_tests.rs  multi_participant_tests.rs  openai_models_tests.rs  openrouter_tests.rs  orchestration_tests.rs  planner_tests.rs  streaming_tests.rs  thought_chain_tests.rs  tool_adapters_test.rs  tool_integration_tests.rs
thoughtchain/: AGENTS.md  Cargo.toml  README.md  WHITEPAPER.md  changelog.txt  start_thoughtchaind
thoughtchain/src/: lib.rs  server.rs
thoughtchain/tests/: server_tests.rs  thoughtchain_tests.rs
