[package]
name = "mentisdb"
version = "0.4.1"
authors = ["Angel Leon <gubatron@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Semantic, hash-chained durable memory for long-running and multi-agent systems."
repository = "https://github.com/CloudLLM-ai/cloudllm"
documentation = "https://docs.rs/mentisdb/latest/mentisdb/"
readme = "README.md"
keywords = ["agents", "memory", "event-sourcing", "llm", "orchestration"]
categories = ["data-structures", "development-tools", "asynchronous"]

[features]
default = ["server"]
server = ["dep:axum", "dep:env_logger", "dep:log", "dep:tokio", "mcp/server"]

[dependencies]
async-trait = "0.1.89"
bincode = { version = "2.0.1", features = ["serde"] }
dashmap = "6"
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
diffy = "0.3"
ed25519-dalek = { version = "2", features = ["alloc"] }
sha2 = "0.10.9"
uuid = { version = "1.22.0", features = ["v4", "serde"] }
mcp = { package = "cloudllm_mcp", path = "../mcp", version = "0.1.0" }
axum = { version = "0.8.8", optional = true }
env_logger = { version = "0.11.8", optional = true }
log = { version = "0.4.28", optional = true }
tokio = { version = "1.50.0", features = ["full"], optional = true }

[dev-dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
criterion = { version = "0.5", features = ["html_reports"] }
ed25519-dalek = { version = "2", features = ["alloc"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
tempfile = "3"
tower = { version = "0.5.3", features = ["util"] }
uuid = { version = "1.22.0", features = ["v4", "serde"] }

[[bench]]
name = "thought_chain"
harness = false

[[bench]]
name = "skill_registry"
harness = false

[[bench]]
name = "http_concurrency"
harness = false

[[bin]]
name = "mentisdbd"
path = "src/bin/mentisdbd.rs"
required-features = ["server"]
