[package]
name = "thoughtchain"
version = "0.1.0"
authors = ["Angel Leon <gubatron@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Semantic, hash-chained memory for long-running and multi-agent systems."
repository = "https://github.com/CloudLLM-ai/cloudllm"
documentation = "https://docs.rs/thoughtchain/latest/thoughtchain/"
readme = "README.md"
keywords = ["agents", "memory", "event-sourcing", "llm", "orchestration"]
categories = ["data-structures", "development-tools", "asynchronous"]

[features]
default = []
server = ["dep:axum", "dep:tokio"]

[dependencies]
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
uuid = { version = "1.10", features = ["v4", "serde"] }
axum = { version = "0.8.7", optional = true }
tokio = { version = "1.48.0", features = ["full"], optional = true }

[dev-dependencies]
reqwest = { version = "0.12.24", features = ["json"] }
tower = { version = "0.5.2", features = ["util"] }

[[bin]]
name = "thoughtchaind"
path = "src/bin/thoughtchaind.rs"
required-features = ["server"]
